--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 
 /********************TOPNAV******************/
-.gb_Xe {
-  width: 30px;
-}
-
-#google-img {
-    width: 150px;
-}
-
 #topnav {
- display: flex;
- flex-direction: row;
- background-color: pink;
+    display: flex;
+    flex-direction: row;
+    margin-top: 25px;
+   }
+#google-img {
+    width: 130px;
+    margin-left: 20px;
 }
+
 /*will place item towards the right end*/
 #topnav .btn-right {
     margin-left: auto;
@@ -22,14 +19,69 @@ search box inside*/
 .bar {
     display: flex;
     justify-content: center;
-    width: 600px;
-    background-color: blue;
-    border-radius: 30px;  
+    width: 620px;
+    border-radius: 30px;
+    margin-left: 50px;
+    border:1px solid #dcdcdc;
+}
+
+.bar:hover{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+  }
+/*removes border from text input*/
+.searchBar:focus {
+    outline: none;
 }
 
 .searchBar {
     width: 500px;
     height: 47px;
-    border: 1px solid #eaeaea;
+    border: none;
 }
+
+#mic-icon, 
+#search-icon {
+    display: flex;
+    font-size: 1.7rem;
+    align-items: center;
+    padding: 5px;
+}
+.btn-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+}
+.btn-right .btn-signIn {
+    font-size: 14px;
+    padding: 8px 25px; /*increase size of btn*/
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    background-color: #1a73e8;;
+} 
+
+.btn-signIn:hover{
+    box-shadow: 1px 1px 6px 1px #dcdcdc;
+  }
+.gb_Xe {
+    width: 25px;
+    margin-right: 10px;
+  }
 /*****************TOPNAV END******************/
+/****************ICON BAR********************/
+.icon-bar {
+    margin-top: 10px;
+    width: 30%;
+    position: relative;
+    left: 230px;
+    
+}
+.icon-bar div {
+    background-color: pink;
+    display:flex;
+    flex-direction: row;
+    
+}
+/****************ICON BAR END****************/
