--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+* {
+    font-family: arial,sans-serif;
+}
 /********************TOPNAV******************/
 #topnav {
     display: flex;
@@ -113,8 +115,12 @@ search box inside*/
 }
 
 #result-container .box-link {
-    font-size: 22px;
+    font-size: 20px;
     text-decoration: none;
+    color: #1a0dab;
+}
+#result-container .box-link:hover {
+    text-decoration: underline;
 }
 
 #people-ask-box {
@@ -128,12 +134,19 @@ search box inside*/
 #people-ask-box h3 span {
     margin-left: 15px;
     opacity: .6;
-    font-size: 19px;
+    font-size: 14px;
 }
 
 #people-ask-box p {
-    font-size: 18px;
+    font-size: 16px;
     margin: 12px 0;
+    display: flex;
+    cursor: pointer;
+}
+
+#people-ask-box p span {
+    margin-left: auto;
+    opacity: .5;
 }
 
 #people-ask-box hr {
@@ -150,5 +163,7 @@ search box inside*/
 }
 .box .desc {
     opacity: .75;
+    line-height: 1.5;
+    font-size: 14px;
 }
 /***************RESULT CONTAINER ENDS****************/
